# mele

./: .env.example  .gitattributes  .gitignore  AGENTS.md  HOW_TO_RUN.md  README.md  START_HERE.bat  package-lock.json  package.json  railway.json  render.yaml  smoke-test.mjs  start_here.sh  vitest.config.js
archive/: README.md
docs/: ALGORITHM_VALIDATION_REGISTER.md  ARCHITECTURE.md  ASSET_LICENSE_REGISTER.md  BACKEND_BLUEPRINT.md  DEPLOYMENT_RUNBOOK.md  DEPLOY_CHECKLIST.md  DEPLOY_ENV_MATRIX.md  DEPLOY_SMOKE_TEST.md  GO_LIVE_EXTERNAL_SETTINGS.md  IMPROVEMENT_CHECKLIST.md  LAUNCH_RISK_REGISTER.md  LEGAL_COMPLIANCE_SOP.md  OAUTH_LOGIN_RUNBOOK.md  OBSERVABILITY_AND_QA.md  PAYMENT_REFUND_DISPUTE_SOP.md  PM_REVIEW_2026-04-30.md  PRODUCT_AR_MOBILE_ROADMAP.md  PUBLIC_TESTING_RUNBOOK.md  (+7 more)
python_api/: .dockerignore  AR_API_SPEC.md  Dockerfile  README.md  _iztro_helper.cjs  _sweph_helper.cjs  main.py  models.py  package.json  pyproject.toml  requirements-dev.txt  requirements-full.txt  requirements.txt  run.sh  start.bat
python_api/data/: build_data.py  runes.json  tarot.json  tarot_art_prompts.json  tarot_style_interpretations.json
python_api/engines/: astro.py  bazi.py  explanations.py  humandesign.py  maya.py  numerology.py  runes.py  tarot.py  ziwei.py
python_api/renderers/: astro_render.py  bazi_render.py  common.py  hd_render.py  maya_render.py  numerology_render.py  runes_render.py  tarot_render.py  ziwei_render.py
python_api/tests/: test_endpoints.py  test_maya_oracle.py  test_maya_render_layout.py  test_tarot_style_interpretations.py  test_timezone_models.py  verify_10_celebrities.py  verify_5_celebrities.py  verify_celebrities.py
(+278 files in other folders)
